--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -26,6 +26,10 @@
    </HEAD>
 <BODY>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
+<?php
+echo "test";
+?>
+
 <div class="header">
 <img src="header.png" class="header"/>
 <div class="title">Online Test</div>
