--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -30,6 +30,9 @@
 <img src="header.png" class="header"/>
 <div class="title">Online Test</div>
 </div>
+<?php
+echo
+?>
 <div class="content">
 <form action="#.php" method="post">
 You are login as <span> </span> <input type="submit" value="Sign out" class="logout-button"></br>
