--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -27,6 +27,7 @@
 <BODY>
 <?php
 	echo 'test from upstream/development.';
+	echo 'test again from upstream/dev.';
 ?>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
