--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -27,6 +27,7 @@
 <BODY>
 <?php
 	echo 'Hello Jon';
+	echo 'bye Jon';
 ?>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
