--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -26,7 +26,7 @@
    </HEAD>
 <BODY>
 <?php
-	echo 'Hello Jon';
+	echo 'You are beginning to learn young one, beginning to realize your limitations.';
 ?>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
