--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -29,6 +29,11 @@
 	echo 'Hello Jon';
 	echo 'bye Jon';
 	echo 'You are beginning to learn young one, beginning to realize your limitations.';
+
+
+
+
+	echo '!!!!!!!!!!!!!!!!!!!!!!!!CRAZY!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!';
 ?>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
