--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -26,9 +26,7 @@
    </HEAD>
 <BODY>
 <?php
-	echo '!!!!!!!!!!!!!!!!!!!!!!!!CRAZY!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!';
-	echo 'Team meeting: Github training!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!';
-	echo 'Yo Adrian, I did it!!!!';
+	echo 'No man can kill me........';
 ?>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
