test Bernike upload

--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -31,7 +31,7 @@
 <div class="title">Online Test</div>
 </div>
 <?php
-echo
+echo 'testttt';
 ?>
 <div class="content">
 <form action="#.php" method="post">
