--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -25,6 +25,7 @@
       </TITLE>
    </HEAD>
 <BODY>
+<p>MegaMonkeys shall rule the world!!!</p>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
 <img src="header.png" class="header"/>
