--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -25,7 +25,7 @@
       </TITLE>
    </HEAD>
 <BODY>
-<p>Hello world</p>
+<p>Jordan was here.</p>
 <div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
 <div class="header">
 <img src="header.png" class="header"/>
