--- a/testMakingPage.html
+++ b/testMakingPage.html
@@ -25,21 +25,11 @@
       </TITLE>
    </HEAD>
 <BODY>
-<?php
-	echo 'No man can kill me........';
-?>
-<div id="load_screen"><img src="megamonkeysloading.png" />loading document</div>
-<?php
-echo "test";
-?>
-
+<div id="load_screen"><img src="images/megamonkeysloading.png" />loading document</div>
 <div class="header">
-<img src="header.png" class="header"/>
+<img src="images/header.png" class="header"/>
 <div class="title">Online Test</div>
 </div>
-<?php
-echo 'testttt';
-?>
 <div class="content">
 <form action="#.php" method="post">
 You are login as <span> </span> <input type="submit" value="Sign out" class="logout-button"></br>
@@ -64,7 +54,7 @@ Time limit : &nbsp;<input type="number" name="hours" min="0" max="10" class="inp
 </td>
 </tr>
 <tr>
-<td>
+<td colspan="2">
 <input type="submit" value="publish" class="publish-Button">
 <input type="submit" value="save" class="save-Button">
 <input type="submit" value="cancel" class="cancel-Button">
@@ -81,41 +71,12 @@ Time limit : &nbsp;<input type="number" name="hours" min="0" max="10" class="inp
 	<td>Question</td>
 </tr>
 <tr>
-	<td> 2</td>
+	<td height="300"> 2</td>
 	<td>Multiple Choice</td>
 	<td>1</td>
-	<td  rowspan="7"></td>
+	<td> This is a Question</td>
 </tr>
-<tr>
-	<td> 2</td>
-	<td>True/False</td>
-	<td></td>
-</tr>
-<tr>
-	<td> 2</td>
-	<td>Matching</td>
-	<td></td>
-</tr>
-<tr>
-	<td> 5</td>
-	<td>Fill in the blank</td>
-	<td></td>
-</tr>
-<tr>
-	<td> 10</td>
-	<td>Essay</td>
-	<td></td>
-</tr>
-<tr>
-	<td> -</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td> -</td>
-	<td></td>
-	<td></td>
-</tr>
+
 </table></div>
 <table>
 <tr>
@@ -134,7 +95,7 @@ PLEDGE:</br>
 </form>
 </div>
 <div class="footer"></br>
-<img src="footerblue.png" class="footerblue"/>
+<img src="images/footerblue.png" class="footerblue"/>
 &copy; MegaMonkey Group - Pensacola Christian College 2015
 </div>
 </BODY>
